--- a/indexx.html
+++ b/indexx.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#"><img class="logo" src="Cred Guild/transparent_logo/f.png" alt="Cred Guild"></a>
+        <a href="#"><img class="logo" src="f.png" alt="Cred Guild"></a>
         <nav class="navbar">
             <ul class="navbar-list">
                 <li><a class="navbar-link" href="#">Home</a></li>
